libweva/include/weva_c.h


#define WEVA_ABI_VERSION_MAJOR 0
#define WEVA_ABI_VERSION_MINOR 41
typedef enum weva_status {
    WEVA_OK = 0,
    WEVA_ERR_INVALID_ARGUMENT = 1,
    WEVA_ERR_PARSE = 2,
    WEVA_ERR_NOT_FOUND = 3,
    WEVA_ERR_UNSUPPORTED = 4,
    WEVA_ERR_INTERNAL = 5,
    WEVA_ERR_INVALID_STATE = 6
} weva_status;
typedef uint32_t weva_element_t;
#define WEVA_ELEMENT_NONE ((weva_element_t)0xFFFFFFFFu)
typedef struct weva_config {
    int viewport_width;
    int viewport_height;
    double device_pixel_ratio;
    double root_font_size;
    int use_user_agent_stylesheet;
} weva_config;
typedef struct weva_vertex {
    float x, y;
    float r, g, b, a;
    float u, v;
} weva_vertex;
typedef enum weva_draw_kind {
    WEVA_DRAW_GEOMETRY = 0,
    WEVA_DRAW_BACKDROP_FILTER = 1,
    WEVA_DRAW_ROUNDED_RECT = 2
} weva_draw_kind;
typedef enum weva_blend_mode {
    WEVA_BLEND_NORMAL = 0,
    WEVA_BLEND_MULTIPLY = 1,
    WEVA_BLEND_SCREEN = 2,
    WEVA_BLEND_OVERLAY = 3,
    WEVA_BLEND_DARKEN = 4,
    WEVA_BLEND_LIGHTEN = 5,
    WEVA_BLEND_COLOR_DODGE = 6,
    WEVA_BLEND_COLOR_BURN = 7,
    WEVA_BLEND_HARD_LIGHT = 8,
    WEVA_BLEND_SOFT_LIGHT = 9,
    WEVA_BLEND_DIFFERENCE = 10,
    WEVA_BLEND_EXCLUSION = 11,
    WEVA_BLEND_HUE = 12,
    WEVA_BLEND_SATURATION = 13,
    WEVA_BLEND_COLOR = 14,
    WEVA_BLEND_LUMINOSITY = 15
} weva_blend_mode;
typedef struct weva_rounded_rect {
    double x, y, width, height;
    double radii[4][2];
    float r, g, b, a;
} weva_rounded_rect;
typedef struct weva_backdrop_effect {
    double blur_radius;
    float color_matrix[9];
    float color_offset[3];
    float color_alpha;
} weva_backdrop_effect;
typedef struct weva_draw {
    const weva_vertex* vertices;
    size_t vertex_count;
    const uint32_t* indices;
    size_t index_count;
    uint64_t texture_id;
    int32_t scissor_x, scissor_y, scissor_width, scissor_height;
    int32_t has_scissor;
    int32_t kind;
    weva_backdrop_effect backdrop;
    weva_rounded_rect rounded_rect;
    int32_t blend_mode;
} weva_draw;
typedef struct weva_texture {
    uint64_t id;
    const uint8_t* rgba;
    int32_t width, height;
} weva_texture;
typedef struct weva_render_backend {
    void* user_data;
    uint64_t (*compile_geometry)(void* user_data, const weva_vertex* vertices,
                                 size_t vertex_count, const uint32_t* indices,
                                 size_t index_count);
    void (*render_geometry)(void* user_data, uint64_t geometry, float translate_x,
                            float translate_y, uint64_t texture);
    void (*release_geometry)(void* user_data, uint64_t geometry);
    uint64_t (*generate_texture)(void* user_data, const uint8_t* rgba, int32_t width,
                                 int32_t height);
    void (*release_texture)(void* user_data, uint64_t texture);
    uint64_t (*load_texture)(void* user_data, const char* path, int32_t* out_width,
                             int32_t* out_height);
    void (*set_scissor)(void* user_data, int32_t enable, int32_t x, int32_t y, int32_t width,
                        int32_t height);
} weva_render_backend;
typedef struct weva_glyph_bitmap {
    const uint8_t* alpha;
    int32_t width, height;
    const uint8_t* rgba;
} weva_glyph_bitmap;
typedef struct weva_font_backend {
    void* user_data;
    uint64_t (*load_face)(void* user_data, const uint8_t* data, size_t length, int32_t index);
    int32_t (*face_metrics)(void* user_data, uint64_t face, double px, double* out_ascent,
                            double* out_descent, double* out_line_gap);
    int32_t (*glyph_index)(void* user_data, uint64_t face, uint32_t codepoint,
                           uint32_t* out_glyph);
    int32_t (*glyph_metrics)(void* user_data, uint64_t face, uint32_t glyph, double px,
                             double* out_advance, double* out_bearing_x, double* out_bearing_y,
                             int32_t* out_width, int32_t* out_height);
    int32_t (*rasterize)(void* user_data, uint64_t face, uint32_t glyph, double px,
                         weva_glyph_bitmap* out);
    size_t (*shape)(void* user_data, uint64_t face, const char* utf8, size_t length, double px,
                    uint32_t* out_glyphs, double* out_advances, uint32_t* out_clusters,
                    size_t capacity);
    uint64_t (*variant)(void* user_data, uint64_t face, int32_t weight, int32_t italic);
} weva_font_backend;
typedef struct weva_shaped_glyph {
    uint32_t glyph, cluster;
    double x_advance, y_advance;
    double x_offset, y_offset;
} weva_shaped_glyph;
typedef enum weva_event_kind {
    WEVA_EVENT_NONE = 0,
    WEVA_EVENT_POINTER_DOWN,
    WEVA_EVENT_POINTER_UP,
    WEVA_EVENT_CLICK,
    WEVA_EVENT_POINTER_ENTER,
    WEVA_EVENT_POINTER_LEAVE,
    WEVA_EVENT_KEY_DOWN,
    WEVA_EVENT_KEY_UP,
    WEVA_EVENT_TEXT_INPUT,
    WEVA_EVENT_FOCUS,
    WEVA_EVENT_BLUR,
    WEVA_EVENT_VALUE_CHANGED,
    WEVA_EVENT_CHANGE,
    WEVA_EVENT_SUBMIT,
    WEVA_EVENT_SCROLL,
    WEVA_EVENT_TOGGLE,
    WEVA_EVENT_CONTEXT_MENU,
    WEVA_EVENT_COMPOSITION_START,
    WEVA_EVENT_COMPOSITION_UPDATE,
    WEVA_EVENT_COMPOSITION_END,
    WEVA_EVENT_RESET,
    WEVA_EVENT_CLOSE,
    WEVA_EVENT_CANCEL,
    WEVA_EVENT_INVALID,
    WEVA_EVENT_BEFORE_TOGGLE
} weva_event_kind;
typedef enum weva_key_modifier {
    WEVA_MOD_SHIFT = 1u << 0,
    WEVA_MOD_CTRL = 1u << 1,
    WEVA_MOD_ALT = 1u << 2,
    WEVA_MOD_META = 1u << 3
} weva_key_modifier;
typedef enum weva_key {
    WEVA_KEY_OTHER = 0,
    WEVA_KEY_TAB = 1,
    WEVA_KEY_ENTER = 2,
    WEVA_KEY_SPACE = 3,
    WEVA_KEY_ESCAPE = 4,
    WEVA_KEY_BACKSPACE = 5,
    WEVA_KEY_DELETE = 6,
    WEVA_KEY_LEFT = 7,
    WEVA_KEY_RIGHT = 8,
    WEVA_KEY_UP = 9,
    WEVA_KEY_DOWN = 10,
    WEVA_KEY_HOME = 11,
    WEVA_KEY_END = 12,
    WEVA_KEY_PAGE_UP = 13,
    WEVA_KEY_PAGE_DOWN = 14
} weva_key;
typedef struct weva_event {
    int32_t kind;              
    weva_element_t target;     
    double x, y;               
    uint32_t buttons;          
    int32_t key;               
    uint32_t modifiers;        
    char text[8];
    char handler[48];
} weva_event;
typedef struct weva_stats {
    double update_ms;
    double cascade_ms, animate_ms, boxes_ms, layout_ms, paint_ms;
    uint64_t updates;                 
    uint32_t elements;                
    uint32_t boxes;                   
    uint32_t draws;                   
    uint32_t textures;                
    uint32_t texture_cache_hits, texture_cache_misses;
    uint64_t cascade_elements, cascade_pseudos;   
} weva_stats;
typedef enum weva_box_kind {
    WEVA_BOX_BLOCK = 0,
    WEVA_BOX_ANONYMOUS_BLOCK = 1,
    WEVA_BOX_INLINE = 2,
    WEVA_BOX_ANONYMOUS_INLINE = 3,
    WEVA_BOX_LINE = 4,
    WEVA_BOX_TEXT = 5,
} weva_box_kind;
#define WEVA_BOX_NONE ((uint32_t)0xFFFFFFFFu)
typedef struct weva_box {
    uint32_t parent;                 
    uint32_t kind;                   
    weva_element_t element;          
    double x, y, width, height;
    double margin_top, margin_right, margin_bottom, margin_left;
    double border_top, border_right, border_bottom, border_left;
    double padding_top, padding_right, padding_bottom, padding_left;
    double scroll_x, scroll_y;
    const char* text;
    size_t text_length;
} weva_box;
typedef enum weva_pointer_button {
    WEVA_BUTTON_PRIMARY = 1u << 0,
    WEVA_BUTTON_SECONDARY = 1u << 1,
    WEVA_BUTTON_MIDDLE = 1u << 2
} weva_pointer_button;
typedef struct weva_binding_source {
    void* user;
    size_t (*value)(void* user, const char* path, char* buffer, size_t capacity, int* found);
    int (*count)(void* user, const char* path);
} weva_binding_source;
typedef enum weva_validity_error {
    WEVA_VALIDITY_VALUE_MISSING = 1u << 0,
    WEVA_VALIDITY_TYPE_MISMATCH = 1u << 1,
    WEVA_VALIDITY_PATTERN_MISMATCH = 1u << 2,
    WEVA_VALIDITY_TOO_LONG = 1u << 3,
    WEVA_VALIDITY_TOO_SHORT = 1u << 4,
    WEVA_VALIDITY_RANGE_UNDERFLOW = 1u << 5,
    WEVA_VALIDITY_RANGE_OVERFLOW = 1u << 6,
    WEVA_VALIDITY_STEP_MISMATCH = 1u << 7,
    WEVA_VALIDITY_BAD_INPUT = 1u << 8,
    WEVA_VALIDITY_CUSTOM_ERROR = 1u << 9
} weva_validity_error;
typedef enum weva_change_kind {
    WEVA_CHANGE_PAINT = 1,
    WEVA_CHANGE_LAYOUT = 2,
    WEVA_CHANGE_BOXES = 3
} weva_change_kind;
typedef struct weva_element_change {
    weva_element_t element;
    int32_t kind;   
} weva_element_change;