Packages/com.wevaui/Runtime/Native/WevaNative.g.cs

// <auto-generated> by hosts/unity/gen_bindings.py from weva_c.h, weva_unity.h. Do not edit; regenerate.
// Blittable P/Invoke surface of libweva's C ABI for the Unity host (weva_core plugin).
#nullable disable
using System;
using System.Runtime.InteropServices;

namespace Weva.Native
{
    internal enum weva_status : int
    {
        WEVA_OK = 0,
        WEVA_ERR_INVALID_ARGUMENT = 1,
        WEVA_ERR_PARSE = 2,
        WEVA_ERR_NOT_FOUND = 3,
        WEVA_ERR_UNSUPPORTED = 4,
        WEVA_ERR_INTERNAL = 5,
        WEVA_ERR_INVALID_STATE = 6,
    }

    internal enum weva_draw_kind : int
    {
        WEVA_DRAW_GEOMETRY = 0,
        WEVA_DRAW_BACKDROP_FILTER = 1,
        WEVA_DRAW_ROUNDED_RECT = 2,
    }

    internal enum weva_blend_mode : int
    {
        WEVA_BLEND_NORMAL = 0,
        WEVA_BLEND_MULTIPLY = 1,
        WEVA_BLEND_SCREEN = 2,
        WEVA_BLEND_OVERLAY = 3,
        WEVA_BLEND_DARKEN = 4,
        WEVA_BLEND_LIGHTEN = 5,
        WEVA_BLEND_COLOR_DODGE = 6,
        WEVA_BLEND_COLOR_BURN = 7,
        WEVA_BLEND_HARD_LIGHT = 8,
        WEVA_BLEND_SOFT_LIGHT = 9,
        WEVA_BLEND_DIFFERENCE = 10,
        WEVA_BLEND_EXCLUSION = 11,
        WEVA_BLEND_HUE = 12,
        WEVA_BLEND_SATURATION = 13,
        WEVA_BLEND_COLOR = 14,
        WEVA_BLEND_LUMINOSITY = 15,
    }

    internal enum weva_event_kind : int
    {
        WEVA_EVENT_NONE = 0,
        WEVA_EVENT_POINTER_DOWN = 1,
        WEVA_EVENT_POINTER_UP = 2,
        WEVA_EVENT_CLICK = 3,
        WEVA_EVENT_POINTER_ENTER = 4,
        WEVA_EVENT_POINTER_LEAVE = 5,
        WEVA_EVENT_KEY_DOWN = 6,
        WEVA_EVENT_KEY_UP = 7,
        WEVA_EVENT_TEXT_INPUT = 8,
        WEVA_EVENT_FOCUS = 9,
        WEVA_EVENT_BLUR = 10,
        WEVA_EVENT_VALUE_CHANGED = 11,
        WEVA_EVENT_CHANGE = 12,
        WEVA_EVENT_SUBMIT = 13,
        WEVA_EVENT_SCROLL = 14,
        WEVA_EVENT_TOGGLE = 15,
        WEVA_EVENT_CONTEXT_MENU = 16,
        WEVA_EVENT_COMPOSITION_START = 17,
        WEVA_EVENT_COMPOSITION_UPDATE = 18,
        WEVA_EVENT_COMPOSITION_END = 19,
        WEVA_EVENT_RESET = 20,
        WEVA_EVENT_CLOSE = 21,
        WEVA_EVENT_CANCEL = 22,
        WEVA_EVENT_INVALID = 23,
        WEVA_EVENT_BEFORE_TOGGLE = 24,
    }

    [Flags] internal enum weva_key_modifier : uint
    {
        WEVA_MOD_SHIFT = 1 << 0,
        WEVA_MOD_CTRL = 1 << 1,
        WEVA_MOD_ALT = 1 << 2,
        WEVA_MOD_META = 1 << 3,
    }

    internal enum weva_key : int
    {
        WEVA_KEY_OTHER = 0,
        WEVA_KEY_TAB = 1,
        WEVA_KEY_ENTER = 2,
        WEVA_KEY_SPACE = 3,
        WEVA_KEY_ESCAPE = 4,
        WEVA_KEY_BACKSPACE = 5,
        WEVA_KEY_DELETE = 6,
        WEVA_KEY_LEFT = 7,
        WEVA_KEY_RIGHT = 8,
        WEVA_KEY_UP = 9,
        WEVA_KEY_DOWN = 10,
        WEVA_KEY_HOME = 11,
        WEVA_KEY_END = 12,
        WEVA_KEY_PAGE_UP = 13,
        WEVA_KEY_PAGE_DOWN = 14,
    }

    internal enum weva_box_kind : int
    {
        WEVA_BOX_BLOCK = 0,
        WEVA_BOX_ANONYMOUS_BLOCK = 1,
        WEVA_BOX_INLINE = 2,
        WEVA_BOX_ANONYMOUS_INLINE = 3,
        WEVA_BOX_LINE = 4,
        WEVA_BOX_TEXT = 5,
    }

    [Flags] internal enum weva_pointer_button : uint
    {
        WEVA_BUTTON_PRIMARY = 1 << 0,
        WEVA_BUTTON_SECONDARY = 1 << 1,
        WEVA_BUTTON_MIDDLE = 1 << 2,
    }

    [Flags] internal enum weva_validity_error : uint
    {
        WEVA_VALIDITY_VALUE_MISSING = 1 << 0,
        WEVA_VALIDITY_TYPE_MISMATCH = 1 << 1,
        WEVA_VALIDITY_PATTERN_MISMATCH = 1 << 2,
        WEVA_VALIDITY_TOO_LONG = 1 << 3,
        WEVA_VALIDITY_TOO_SHORT = 1 << 4,
        WEVA_VALIDITY_RANGE_UNDERFLOW = 1 << 5,
        WEVA_VALIDITY_RANGE_OVERFLOW = 1 << 6,
        WEVA_VALIDITY_STEP_MISMATCH = 1 << 7,
        WEVA_VALIDITY_BAD_INPUT = 1 << 8,
        WEVA_VALIDITY_CUSTOM_ERROR = 1 << 9,
    }

    internal enum weva_change_kind : int
    {
        WEVA_CHANGE_PAINT = 1,
        WEVA_CHANGE_LAYOUT = 2,
        WEVA_CHANGE_BOXES = 3,
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_config
    {
        public int viewport_width;
        public int viewport_height;
        public double device_pixel_ratio;
        public double root_font_size;
        public int use_user_agent_stylesheet;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_vertex
    {
        public float x;
        public float y;
        public float r;
        public float g;
        public float b;
        public float a;
        public float u;
        public float v;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_rounded_rect
    {
        public double x;
        public double y;
        public double width;
        public double height;
        public fixed double radii[8]; // double radii[4][2]
        public float r;
        public float g;
        public float b;
        public float a;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_backdrop_effect
    {
        public double blur_radius;
        public fixed float color_matrix[9]; // float color_matrix[9]
        public fixed float color_offset[3]; // float color_offset[3]
        public float color_alpha;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_draw
    {
        public weva_vertex* vertices;
        public nuint vertex_count;
        public uint* indices;
        public nuint index_count;
        public ulong texture_id;
        public int scissor_x;
        public int scissor_y;
        public int scissor_width;
        public int scissor_height;
        public int has_scissor;
        public int kind;
        public weva_backdrop_effect backdrop;
        public weva_rounded_rect rounded_rect;
        public int blend_mode;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_texture
    {
        public ulong id;
        public byte* rgba;
        public int width;
        public int height;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_render_backend
    {
        public void* user_data;
        public delegate* unmanaged[Cdecl]<void*, weva_vertex*, nuint, uint*, nuint, ulong> compile_geometry;
        public delegate* unmanaged[Cdecl]<void*, ulong, float, float, ulong, void> render_geometry;
        public delegate* unmanaged[Cdecl]<void*, ulong, void> release_geometry;
        public delegate* unmanaged[Cdecl]<void*, byte*, int, int, ulong> generate_texture;
        public delegate* unmanaged[Cdecl]<void*, ulong, void> release_texture;
        public delegate* unmanaged[Cdecl]<void*, byte*, int*, int*, ulong> load_texture;
        public delegate* unmanaged[Cdecl]<void*, int, int, int, int, int, void> set_scissor;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_glyph_bitmap
    {
        public byte* alpha;
        public int width;
        public int height;
        public byte* rgba;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_font_backend
    {
        public void* user_data;
        public delegate* unmanaged[Cdecl]<void*, byte*, nuint, int, ulong> load_face;
        public delegate* unmanaged[Cdecl]<void*, ulong, double, double*, double*, double*, int> face_metrics;
        public delegate* unmanaged[Cdecl]<void*, ulong, uint, uint*, int> glyph_index;
        public delegate* unmanaged[Cdecl]<void*, ulong, uint, double, double*, double*, double*, int*, int*, int> glyph_metrics;
        public delegate* unmanaged[Cdecl]<void*, ulong, uint, double, weva_glyph_bitmap*, int> rasterize;
        public delegate* unmanaged[Cdecl]<void*, ulong, byte*, nuint, double, uint*, double*, uint*, nuint, nuint> shape;
        public delegate* unmanaged[Cdecl]<void*, ulong, int, int, ulong> variant;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_shaped_glyph
    {
        public uint glyph;
        public uint cluster;
        public double x_advance;
        public double y_advance;
        public double x_offset;
        public double y_offset;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_event
    {
        public int kind;
        public uint target;
        public double x;
        public double y;
        public uint buttons;
        public int key;
        public uint modifiers;
        public fixed byte text[8]; // char text[8]
        public fixed byte handler[48]; // char handler[48]
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_stats
    {
        public double update_ms;
        public double cascade_ms;
        public double animate_ms;
        public double boxes_ms;
        public double layout_ms;
        public double paint_ms;
        public ulong updates;
        public uint elements;
        public uint boxes;
        public uint draws;
        public uint textures;
        public uint texture_cache_hits;
        public uint texture_cache_misses;
        public ulong cascade_elements;
        public ulong cascade_pseudos;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_box
    {
        public uint parent;
        public uint kind;
        public uint element;
        public double x;
        public double y;
        public double width;
        public double height;
        public double margin_top;
        public double margin_right;
        public double margin_bottom;
        public double margin_left;
        public double border_top;
        public double border_right;
        public double border_bottom;
        public double border_left;
        public double padding_top;
        public double padding_right;
        public double padding_bottom;
        public double padding_left;
        public double scroll_x;
        public double scroll_y;
        public byte* text;
        public nuint text_length;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_binding_source
    {
        public void* user;
        public delegate* unmanaged[Cdecl]<void*, byte*, byte*, nuint, int*, nuint> value;
        public delegate* unmanaged[Cdecl]<void*, byte*, int> count;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe struct weva_element_change
    {
        public uint element;
        public int kind;
    }

    internal static unsafe partial class WevaNative
    {
        public const string Library = "weva_core";
        public const int WEVA_ABI_VERSION_MAJOR = 0;
        public const int WEVA_ABI_VERSION_MINOR = 41;
        public const uint WEVA_ELEMENT_NONE = 0xFFFFFFFFu;
        public const uint WEVA_BOX_NONE = 0xFFFFFFFFu;
